add shap analysis

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -713,6 +713,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('id',\n",
+       " 'limit_bal',\n",
+       " 'sex',\n",
+       " 'education',\n",
+       " 'marriage',\n",
+       " 'age',\n",
+       " 'pay_0',\n",
+       " 'pay_2',\n",
+       " 'pay_3',\n",
+       " 'pay_4',\n",
+       " 'pay_5',\n",
+       " 'pay_6',\n",
+       " 'bill_amt2',\n",
+       " 'bill_amt4',\n",
+       " 'bill_amt6',\n",
+       " 'pay_amt1',\n",
+       " 'pay_amt2',\n",
+       " 'pay_amt3',\n",
+       " 'pay_amt4',\n",
+       " 'pay_amt5',\n",
+       " 'pay_amt6',\n",
+       " 'target')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.names"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
